Header Transparent and On Scroll with Mobile Off Canvas Menu

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"
                 />
               </svg>
-              <span>HELLO@CODEWEB.COM</span>
+              <span>Hello@Codeweb.com</span>
             </a>
           </div>
         </div>
@@ -126,11 +126,11 @@
             <ul class="navbar-nav pe-2 ms-auto me-4 mb-2 mb-md-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html"
-                  >HOME</a
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
                 <div class="dropdown">
@@ -142,34 +142,38 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    SERVICES
+                    Services
                   </a>
 
                   <ul
                     class="dropdown-menu dropdown-animated"
                     aria-labelledby="dorpdownServices"
                   >
-                    <li><a class="dropdown-item" href="#">WEB DESIGNING</a></li>
+                    <li><a class="dropdown-item" href="#">Web Designing</a></li>
                     <li>
-                      <a class="dropdown-item" href="#">WEB DEVELOPMENT</a>
+                      <a class="dropdown-item" href="#">Web Development</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">DIGITAL MARKETING</a>
+                      <a class="dropdown-item" href="#">Digital Marketing</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">DOMAIN & HOSTING</a>
+                      <a class="dropdown-item" href="#">Domain & Hosting</a>
                     </li>
                   </ul>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">PORTFOLIO</a>
+                <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
-            <a href="./customerPanel/index.html" class="btn btn-login">LOGIN</a>
+            <a
+              href="./customerPanel/index.html"
+              class="btn btn-login rounded-pill"
+              >Login</a
+            >
           </div>
         </div>
       </nav>
