--- a/index.html
+++ b/index.html
@@ -38,61 +38,98 @@
               <i class="fab fa-facebook-f"></i>
             </a>
             <a href="#" class="instagram">
-              <!-- <i class="fab fa-instagram"></i> -->
               <svg
-                height="16px"
-                viewBox="0 0 512 512"
-                width="16px"
+                version="1.1"
+                id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 551.034 551.034"
+                style="enable-background: new 0 0 551.034 551.034"
+                xml:space="preserve"
               >
-                <linearGradient
-                  id="a"
-                  gradientUnits="userSpaceOnUse"
-                  x1="42.966156268"
-                  x2="469.0337477"
-                  y1="469.0296477168"
-                  y2="42.9620562848"
-                >
-                  <stop offset="0" stop-color="#ffd600" />
-                  <stop offset=".5" stop-color="#ff0100" />
-                  <stop offset="1" stop-color="#d800b9" />
-                </linearGradient>
-                <linearGradient
-                  id="b"
-                  gradientUnits="userSpaceOnUse"
-                  x1="163.0429956456"
-                  x2="348.9539083464"
-                  y1="348.9538083312"
-                  y2="163.0428956304"
-                >
-                  <stop offset="0" stop-color="#ff6400" />
-                  <stop offset=".5" stop-color="#ff0100" />
-                  <stop offset="1" stop-color="#fd0056" />
-                </linearGradient>
-                <linearGradient
-                  id="c"
-                  gradientUnits="userSpaceOnUse"
-                  x1="370.9291325432"
-                  x2="414.3727849912"
-                  y1="141.0676714336"
-                  y2="97.6240189856"
-                >
-                  <stop offset="0" stop-color="#f30072" />
-                  <stop offset="1" stop-color="#e50097" />
-                </linearGradient>
-                <path
-                  d="m510.460938 150.453125c-1.246094-27.25-5.574219-45.859375-11.902344-62.140625-6.425782-17.082031-16.503906-32.554688-29.527344-45.34375-12.785156-13.023438-28.261719-23.105469-45.34375-29.535156-16.285156-6.324219-34.890625-10.648438-62.140625-11.886719-27.300781-1.25-36.023437-1.546875-105.546875-1.546875s-78.246094.296875-105.546875 1.539062c-27.25 1.246094-45.855469 5.574219-62.140625 11.902344-17.082031 6.425782-32.554688 16.503906-45.34375 29.527344-13.023438 12.785156-23.105469 28.257812-29.535156 45.339844-6.324219 16.285156-10.648438 34.894531-11.886719 62.140625-1.25 27.304687-1.546875 36.023437-1.546875 105.546875 0 69.527344.296875 78.25 1.546875 105.550781 1.242187 27.246094 5.570313 45.855469 11.898437 62.140625 6.425782 17.078125 16.503907 32.554688 29.527344 45.339844 12.785156 13.023437 28.261719 23.101562 45.34375 29.527344 16.28125 6.332031 34.890625 10.65625 62.140625 11.902343 27.304688 1.246094 36.023438 1.539063 105.546875 1.539063 69.523438 0 78.246094-.292969 105.546875-1.539063 27.25-1.246093 45.855469-5.570312 62.140625-11.902343 34.386719-13.296876 61.570313-40.480469 74.867188-74.867188 6.332031-16.285156 10.65625-34.894531 11.902344-62.140625 1.242187-27.304687 1.539062-36.023437 1.539062-105.546875 0-69.527344-.296875-78.246094-1.539062-105.546875zm-46.082032 208.996094c-1.136718 24.960937-5.308594 38.515625-8.8125 47.535156-8.613281 22.328125-26.257812 39.972656-48.585937 48.585937-9.019531 3.503907-22.574219 7.675782-47.535157 8.8125-26.988281 1.234376-35.085937 1.492188-103.445312 1.492188-68.363281 0-76.457031-.257812-103.449219-1.492188-24.957031-1.136718-38.511719-5.308593-47.535156-8.8125-11.117187-4.105468-21.175781-10.648437-29.433594-19.152343-8.503906-8.257813-15.046875-18.3125-19.152343-29.433594-3.503907-9.019531-7.675782-22.574219-8.8125-47.535156-1.230469-26.992188-1.492188-35.089844-1.492188-103.445313 0-68.359375.261719-76.453125 1.492188-103.449218 1.140624-24.960938 5.308593-38.515626 8.8125-47.535157 4.105468-11.121093 10.652343-21.179687 19.152343-29.4375 8.257813-8.503906 18.316407-15.046875 29.4375-19.148437 9.019531-3.507813 22.574219-7.675782 47.535157-8.816406 26.992187-1.230469 35.089843-1.492188 103.445312-1.492188h-.003906c68.355468 0 76.453125.261719 103.449218 1.496094 24.960938 1.136718 38.511719 5.308594 47.535157 8.8125 11.117187 4.105468 21.175781 10.648437 29.433593 19.148437 8.503907 8.257813 15.046876 18.316407 19.148438 29.4375 3.507812 9.019531 7.679688 22.574219 8.816406 47.535157 1.230469 26.992187 1.492188 35.089843 1.492188 103.445312 0 68.359375-.257813 76.453125-1.492188 103.449219zm0 0"
-                  fill="url(#a)"
-                />
-                <path
-                  d="m255.996094 124.539062c-72.601563 0-131.457032 58.859376-131.457032 131.460938s58.855469 131.457031 131.457032 131.457031c72.605468 0 131.460937-58.855469 131.460937-131.457031s-58.855469-131.460938-131.460937-131.460938zm0 216.792969c-47.125-.003906-85.332032-38.207031-85.328125-85.335937 0-47.125 38.203125-85.332032 85.332031-85.332032 47.128906.003907 85.332031 38.207032 85.332031 85.332032 0 47.128906-38.207031 85.335937-85.335937 85.335937zm0 0"
-                  fill="url(#b)"
-                />
-                <path
-                  d="m423.371094 119.347656c0 16.964844-13.753906 30.71875-30.71875 30.71875-16.96875 0-30.722656-13.753906-30.722656-30.71875 0-16.96875 13.753906-30.722656 30.722656-30.722656 16.964844 0 30.71875 13.753906 30.71875 30.722656zm0 0"
-                  fill="url(#c)"
-                />
+                <g>
+                  <linearGradient
+                    id="SVGID_1_"
+                    gradientUnits="userSpaceOnUse"
+                    x1="275.517"
+                    y1="4.57"
+                    x2="275.517"
+                    y2="549.72"
+                    gradientTransform="matrix(1 0 0 -1 0 554)"
+                  >
+                    <stop offset="0" class="insta-color1" />
+                    <stop offset="0.3" class="insta-color2" />
+                    <stop offset="0.6" class="insta-color3" />
+                    <stop offset="1" class="insta-color4" />
+                  </linearGradient>
+                  <path
+                    style="fill: url(#SVGID_1_)"
+                    d="M386.878,0H164.156C73.64,0,0,73.64,0,164.156v222.722
+                  c0,90.516,73.64,164.156,164.156,164.156h222.722c90.516,0,164.156-73.64,164.156-164.156V164.156
+                  C551.033,73.64,477.393,0,386.878,0z M495.6,386.878c0,60.045-48.677,108.722-108.722,108.722H164.156
+                  c-60.045,0-108.722-48.677-108.722-108.722V164.156c0-60.046,48.677-108.722,108.722-108.722h222.722
+                  c60.045,0,108.722,48.676,108.722,108.722L495.6,386.878L495.6,386.878z"
+                  />
+
+                  <linearGradient
+                    id="SVGID_2_"
+                    gradientUnits="userSpaceOnUse"
+                    x1="275.517"
+                    y1="4.57"
+                    x2="275.517"
+                    y2="549.72"
+                    gradientTransform="matrix(1 0 0 -1 0 554)"
+                  >
+                    <stop offset="0" class="insta-color1" />
+                    <stop offset="0.3" class="insta-color2" />
+                    <stop offset="0.6" class="insta-color3" />
+                    <stop offset="1" class="insta-color4" />
+                  </linearGradient>
+                  <path
+                    style="fill: url(#SVGID_2_)"
+                    d="M275.517,133C196.933,133,133,196.933,133,275.516s63.933,142.517,142.517,142.517
+                  S418.034,354.1,418.034,275.516S354.101,133,275.517,133z M275.517,362.6c-48.095,0-87.083-38.988-87.083-87.083
+                  s38.989-87.083,87.083-87.083c48.095,0,87.083,38.988,87.083,87.083C362.6,323.611,323.611,362.6,275.517,362.6z"
+                  />
+
+                  <linearGradient
+                    id="SVGID_3_"
+                    gradientUnits="userSpaceOnUse"
+                    x1="418.31"
+                    y1="4.57"
+                    x2="418.31"
+                    y2="549.72"
+                    gradientTransform="matrix(1 0 0 -1 0 554)"
+                  >
+                    <stop offset="0" class="insta-color1" />
+                    <stop offset="0.3" class="insta-color2" />
+                    <stop offset="0.6" class="insta-color3" />
+                    <stop offset="1" class="insta-color4" />
+                  </linearGradient>
+                  <circle
+                    style="fill: url(#SVGID_3_)"
+                    cx="418.31"
+                    cy="134.07"
+                    r="34.15"
+                  />
+                </g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
               </svg>
             </a>
             <a href="#" class="twitter">
@@ -178,7 +215,18 @@
               CODE WEB
               <!-- <img src="./assets/images/logo.png" alt="logo" /> -->
             </a>
-            <button class="btn-close"></button>
+            <button class="btn-close">
+              <svg
+                height="32px"
+                viewBox="0 0 329.26933 329"
+                width="32px"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0"
+                />
+              </svg>
+            </button>
           </div>
 
           <div class="navbar-collapse">
