Banner Title with Animation

--- a/index.html
+++ b/index.html
@@ -265,7 +265,25 @@
     <main>
       <!-- Banner Start -->
       <div class="banner">
-        <div class="inner-banner"></div>
+        <div class="inner-banner">
+          <div id="bannerContent" class="banner-content">
+            <div class="banner-title">
+              <span class="banner-text">We Build</span>
+              <span class="banner-text">Top Notch</span>
+              <span class="banner-text">Web Design</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">Scalable</span>
+              <span class="banner-text">Lighting Fast</span>
+              <span class="banner-text">Web Development</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">We Build</span>
+              <span class="banner-text">Brand Identity</span>
+              <span class="banner-text">Digital Marketing</span>
+            </div>
+          </div>
+        </div>
         <svg
           class="waves"
           xmlns="http://www.w3.org/2000/svg"
@@ -276,30 +294,30 @@
         >
           <defs>
             <path
-              id="gentle-wave"
+              id="gentleWave"
               d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
             />
           </defs>
           <g class="parallax">
             <use
-              xlink:href="#gentle-wave"
+              xlink:href="#gentleWave"
               x="48"
               y="0"
               fill="rgba(255,255,255,0.7"
             />
             <use
-              xlink:href="#gentle-wave"
+              xlink:href="#gentleWave"
               x="48"
               y="3"
               fill="rgba(255,255,255,0.5)"
             />
             <use
-              xlink:href="#gentle-wave"
+              xlink:href="#gentleWave"
               x="48"
               y="5"
               fill="rgba(255,255,255,0.3)"
             />
-            <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+            <use xlink:href="#gentleWave" x="48" y="7" fill="#fff" />
           </g>
         </svg>
       </div>
