Banner Title Added

--- a/index.html
+++ b/index.html
@@ -278,7 +278,12 @@
               <span class="banner-text">Web Development</span>
             </div>
             <div class="banner-title">
-              <span class="banner-text">We Build</span>
+              <span class="banner-text">Provide</span>
+              <span class="banner-text">Domain & Hosting</span>
+              <span class="banner-text">Customer Support</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">Made</span>
               <span class="banner-text">Brand Identity</span>
               <span class="banner-text">Digital Marketing</span>
             </div>
