About Us section added to home page

--- a/contact.html
+++ b/contact.html
@@ -277,6 +277,73 @@
     </header>
     <!-- Header End -->
 
+    <main>
+      <!-- Banner Start -->
+      <div class="banner">
+        <div class="inner-banner">
+          <div id="bannerContent" class="banner-content">
+            <div class="banner-title">
+              <span class="banner-text">We Build</span>
+              <span class="banner-text">Top Notch</span>
+              <span class="banner-text">Web Design</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">Scalable</span>
+              <span class="banner-text">Lighting Fast</span>
+              <span class="banner-text">Web Development</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">Provide</span>
+              <span class="banner-text">Domain & Hosting</span>
+              <span class="banner-text">Customer Support</span>
+            </div>
+            <div class="banner-title">
+              <span class="banner-text">Made</span>
+              <span class="banner-text">Brand Identity</span>
+              <span class="banner-text">Digital Marketing</span>
+            </div>
+          </div>
+        </div>
+        <svg
+          class="waves"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 24 150 28"
+          preserveAspectRatio="none"
+          shape-rendering="auto"
+        >
+          <defs>
+            <path
+              id="gentleWave"
+              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+            />
+          </defs>
+          <g class="parallax">
+            <use
+              xlink:href="#gentleWave"
+              x="48"
+              y="0"
+              fill="rgba(255,255,255,0.7"
+            />
+            <use
+              xlink:href="#gentleWave"
+              x="48"
+              y="3"
+              fill="rgba(255,255,255,0.5)"
+            />
+            <use
+              xlink:href="#gentleWave"
+              x="48"
+              y="5"
+              fill="rgba(255,255,255,0.3)"
+            />
+            <use xlink:href="#gentleWave" x="48" y="7" fill="#fff" />
+          </g>
+        </svg>
+      </div>
+      <!-- Banner End -->
+    </main>
+
     <!-- Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
