--- a/index.html
+++ b/index.html
@@ -340,6 +340,43 @@
         </svg>
       </div>
       <!-- Banner End -->
+
+      <!-- About Us Start -->
+      <section class="about-us">
+        <div class="container">
+          <div class="section-title">
+            <h2>About</h2>
+          </div>
+          <div class="row align-items-center">
+            <div class="col-lg-6 mb-3 mb-lg-0">
+              <div class="slide-up">
+                <h3>
+                  We are an international award-winning IT company with 6 offices
+                  across India, and offers web design, web development and digital
+                  marketing services.
+                </h3>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <p>
+                Codeweb is rated as one of the top web agencies in India by
+                various industry magazines and review sites. We have a right
+                blend of award-winning designers, expert web developers and
+                Google certified digital marketers which make us a unique
+                one-stop solution for hundreds of our clients, spread across 80+
+                countries.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About Us End -->
+
+      <!-- Services Start -->
+      <section class="services">
+        <div class="container"></div>
+      </section>
+      <!-- Services End -->
     </main>
 
     <!-- Footer Start -->
