--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <span>+91-7906471013</span>
             </a>
             <a href="mailto:hello@codeweb.com">
-              <i class="far fa-envelope me-1 pe-1"></i>
+              <i class="far fa-envelope me-1"></i>
               <span>Hello@Codeweb.com</span>
             </a>
           </div>
