Banner css modified 5

--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
             <div class="col-lg-6 mb-3 mb-lg-0">
               <div class="slide-up">
                 <h3>
-                  We are an international award-winning IT company with 6 offices
-                  across India, and offers web design, web development and digital
-                  marketing services.
+                  We are an international award-winning IT company with 6
+                  offices across India, and offers web design, web development
+                  and digital marketing services.
                 </h3>
               </div>
             </div>
