--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CODE WEB | HOME</title>
 
+    <!-- // Page Loader Start -->
+    <script>
+      document.onreadystatechange = function () {
+        if (document.readyState !== "complete") {
+          document.querySelector("body").style.visibility = "hidden";
+          document.querySelector(".loader").style.visibility = "visible";
+        } else {
+          document.querySelector(".loader").style.display = "none";
+          document.querySelector("body").style.visibility = "visible";
+        }
+      };
+    </script>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -21,7 +34,6 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>CODE WEB | HOME</title>
   </head>
 
   <body>
@@ -52,97 +64,60 @@
             </a>
             <a href="#" class="instagram">
               <svg
-                version="1.1"
-                id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="0 0 551.034 551.034"
-                style="enable-background: new 0 0 551.034 551.034"
-                xml:space="preserve"
+                enable-background="new 0 0 512 512"
+                viewBox="0 0 512 512"
               >
-                <g>
-                  <linearGradient
-                    id="SVGID_1_"
-                    gradientUnits="userSpaceOnUse"
-                    x1="275.517"
-                    y1="4.57"
-                    x2="275.517"
-                    y2="549.72"
-                    gradientTransform="matrix(1 0 0 -1 0 554)"
-                  >
-                    <stop offset="0" class="insta-color1" />
-                    <stop offset="0.3" class="insta-color2" />
-                    <stop offset="0.6" class="insta-color3" />
-                    <stop offset="1" class="insta-color4" />
-                  </linearGradient>
-                  <path
-                    style="fill: url(#SVGID_1_)"
-                    d="M386.878,0H164.156C73.64,0,0,73.64,0,164.156v222.722
-                  c0,90.516,73.64,164.156,164.156,164.156h222.722c90.516,0,164.156-73.64,164.156-164.156V164.156
-                  C551.033,73.64,477.393,0,386.878,0z M495.6,386.878c0,60.045-48.677,108.722-108.722,108.722H164.156
-                  c-60.045,0-108.722-48.677-108.722-108.722V164.156c0-60.046,48.677-108.722,108.722-108.722h222.722
-                  c60.045,0,108.722,48.676,108.722,108.722L495.6,386.878L495.6,386.878z"
-                  />
-
-                  <linearGradient
-                    id="SVGID_2_"
-                    gradientUnits="userSpaceOnUse"
-                    x1="275.517"
-                    y1="4.57"
-                    x2="275.517"
-                    y2="549.72"
-                    gradientTransform="matrix(1 0 0 -1 0 554)"
-                  >
-                    <stop offset="0" class="insta-color1" />
-                    <stop offset="0.3" class="insta-color2" />
-                    <stop offset="0.6" class="insta-color3" />
-                    <stop offset="1" class="insta-color4" />
-                  </linearGradient>
-                  <path
-                    style="fill: url(#SVGID_2_)"
-                    d="M275.517,133C196.933,133,133,196.933,133,275.516s63.933,142.517,142.517,142.517
-                  S418.034,354.1,418.034,275.516S354.101,133,275.517,133z M275.517,362.6c-48.095,0-87.083-38.988-87.083-87.083
-                  s38.989-87.083,87.083-87.083c48.095,0,87.083,38.988,87.083,87.083C362.6,323.611,323.611,362.6,275.517,362.6z"
-                  />
-
-                  <linearGradient
-                    id="SVGID_3_"
-                    gradientUnits="userSpaceOnUse"
-                    x1="418.31"
-                    y1="4.57"
-                    x2="418.31"
-                    y2="549.72"
-                    gradientTransform="matrix(1 0 0 -1 0 554)"
-                  >
-                    <stop offset="0" class="insta-color1" />
-                    <stop offset="0.3" class="insta-color2" />
-                    <stop offset="0.6" class="insta-color3" />
-                    <stop offset="1" class="insta-color4" />
-                  </linearGradient>
-                  <circle
-                    style="fill: url(#SVGID_3_)"
-                    cx="418.31"
-                    cy="134.07"
-                    r="34.15"
-                  />
-                </g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
+                <linearGradient
+                  id="a"
+                  x1="255.531"
+                  x2="255.531"
+                  y1="117.176"
+                  y2="406.065"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop offset="0" class="insta-color1" />
+                  <stop offset="1" class="insta-color2" />
+                </linearGradient>
+                <path
+                  fill="url(#a)"
+                  d="M326.1,104.1H185c-47.9,0-86.9,39-86.9,86.9v141c0,47.9,39,86.9,86.9,86.9h141
+                c47.9,0,86.9-39,86.9-86.9V191C412.9,143.1,374,104.1,326.1,104.1z M385,332.1c0,32.5-26.4,58.9-58.9,58.9H185
+                c-32.5,0-58.9-26.4-58.9-58.9V191c0-32.5,26.4-58.9,58.9-58.9h141c32.5,0,58.9,26.4,58.9,58.9L385,332.1L385,332.1z"
+                />
+                <linearGradient
+                  id="b"
+                  x1="255.531"
+                  x2="255.531"
+                  y1="117.176"
+                  y2="406.065"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop offset="0" class="insta-color1" />
+                  <stop offset="1" class="insta-color2" />
+                </linearGradient>
+                <path
+                  fill="url(#b)"
+                  d="M255.5,180.4c-44.7,0-81.1,36.4-81.1,81.1c0,44.7,36.4,81.1,81.1,81.1s81.1-36.4,81.1-81.1
+                C336.6,216.8,300.3,180.4,255.5,180.4z M255.5,314.7c-29.3,0-53.2-23.9-53.2-53.2c0-29.3,23.9-53.2,53.2-53.2s53.2,23.9,53.2,53.2
+                C308.7,290.9,284.9,314.7,255.5,314.7z"
+                />
+                <linearGradient
+                  id="c"
+                  x1="340.043"
+                  x2="340.043"
+                  y1="117.176"
+                  y2="406.065"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop offset="0" class="insta-color1" />
+                  <stop offset="1" class="insta-color2" />
+                </linearGradient>
+                <path
+                  fill="url(#c)"
+                  d="M340,156.7c-5.4,0-10.7,2.2-14.5,6c-3.8,3.8-6,9.1-6,14.5c0,5.4,2.2,10.7,6,14.5
+                c3.8,3.8,9.1,6,14.5,6c5.4,0,10.7-2.2,14.5-6c3.8-3.8,6-9.1,6-14.5c0-5.4-2.2-10.7-6-14.5C350.7,158.9,345.4,156.7,340,156.7z"
+                />
               </svg>
             </a>
             <a href="#" class="twitter">
