--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
             <h2>Customers Say</h2>
           </div>
           <div class="slider-wrapper">
-            <div class="user-image">
+            <div class="user-image d-none d-md-block">
               <div class="swiper-container image-slide">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
