Testimonial mobile fix

--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    
+
     <!-- Swiper Slider -->
     <script src="https://md-aqil.github.io/images/swiper.min.js"></script>
     <!-- App JS -->
@@ -1106,6 +1106,7 @@
         pagination: {
           clickable: true,
           el: ".swiper-pagination",
+          type: "bullets",
         },
         thumbs: {
           swiper: reviewSlide,
