Testimonial mobile fix

--- a/index.html
+++ b/index.html
@@ -1103,10 +1103,12 @@
           modifier: 6,
           slideShadows: false,
         },
-        pagination: {
-          clickable: true,
-          el: ".swiper-pagination",
-          type: "bullets",
+        breakpoints: {
+          pagination: {
+            clickable: true,
+            el: ".swiper-pagination",
+            type: "bullets",
+          },
         },
         thumbs: {
           swiper: reviewSlide,
