--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                   <div class="swiper-slide">
                     <img
                       class="u4"
-                      src="https://md-aqil.github.io/images/beautiful-beauty-face-2657838.jpg"
+                      src="https://images.unsplash.com/photo-1480408144303-d874c5e12201?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=575213599ae24b3dbdfd84be79425c50&auto=format&fit=crop&w=634&q=80"
                       alt=""
                     />
                   </div>
@@ -760,6 +760,93 @@
         </div>
       </section>
       <!-- Client Testimonial End -->
+
+      <!-- Our Team Start -->
+      <section class="our-team">
+        <div class="container">
+          <div class="section-title text-center mb-5">
+            <h2>Our Team</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-5">
+              <div class="team-cards">
+                <img
+                  src="https://images.unsplash.com/photo-1504703395950-b89145a5425b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d702cb99ca804bffcfa8820c46483264&auto=format&fit=crop&w=651&q=80"
+                  class="img-fluid"
+                  alt=""
+                />
+                <span class="cards-rect">
+                  <span class="card-shadow"></span>
+                  <p>Lucy Grace</p>
+                </span>
+                <span class="cards-circle"></span>
+                <ul class="cards-list">
+                  <li>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-5">
+              <div class="team-cards">
+                <img
+                  src="https://images.unsplash.com/photo-1480408144303-d874c5e12201?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=575213599ae24b3dbdfd84be79425c50&auto=format&fit=crop&w=634&q=80"
+                  class="img-fluid"
+                  alt=""
+                />
+                <span class="cards-rect">
+                  <span class="card-shadow"></span>
+                  <p>Chris Levnon</p>
+                </span>
+                <span class="cards-circle"></span>
+                <ul class="cards-list">
+                  <li>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-5">
+              <div class="team-cards">
+                <img
+                  src="https://md-aqil.github.io/images/attractive-beautiful-beauty-1986684.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <span class="cards-rect">
+                  <span class="card-shadow"></span>
+                  <p>Lucy Grace</p>
+                </span>
+                <span class="cards-circle"></span>
+                <ul class="cards-list">
+                  <li>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our Team End -->
     </main>
 
     <!-- Footer Start -->
