Project section Swiper slider commented

--- a/index.html
+++ b/index.html
@@ -642,10 +642,10 @@
       <!-- Services End -->
 
       <!-- Project Showcase Start -->
-      <section class="project-showcase">
-        <div class="">
-          <!-- Swiper -->
-          <div class="swiper-container projectShowcase">
+      <!-- <section class="project-showcase">
+        <div class=""> -->
+          <!-- Swiper Slider Start-->
+          <!-- <div class="swiper-container projectShowcase">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="project-wrap">
@@ -671,9 +671,10 @@
               <div class="swiper-slide">Slide 9</div>
             </div>
             <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </section>
+          </div> -->
+          <!-- Swiper Slider End -->
+        <!-- </div>
+      </section> -->
       <!-- Project Showcase End -->
 
       <!-- Client Testimonial Start -->
@@ -1000,19 +1001,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <ul>
-                <li><a href="#">Website Designing</a></li>
-                <li><a href="#">Mobile Application</a></li>
-                <li><a href="#">Domain & Hosting</a></li>
-
-                <li><a href="#">eCommerce Websites</a></li>
-                <li><a href="#">Web Application</a></li>
-                <li><a href="#">Bulk SMS Services</a></li>
-
-                <li><a href="#">SEO Services</a></li>
-                <li><a href="#">Windows Application</a></li>
-                <li><a href="#">Bulk E-Mail Services</a></li>
-              </ul> -->
             </div>
           </div>
         </div>
@@ -1021,7 +1009,7 @@
         <div class="container">
           <div class="text-center">
             <p>
-              &copy;2021 All rights reserved to Codeweb |
+              &copy;2023 All rights reserved to Codeweb |
               <a href="#">Terms & Conditions</a> |
               <a href="#">Privacy Policy</a>
             </p>
